@startuml

!include system_status.wsdi

!include generic_widget.wsdi

package gui.generated #DDDDDD {
	class Ui_systemStatus < generated by PyQt >
}

package system_status #FFFFFF {

class SystemStatus {
	CPU_USAGE_SIGNAL

	cpu_count
	monitors
	cpu_usage_worker
	cpu_layout

	create_cpu_usage_monitor(self, i)
	close_event_with_stopping_worker(self, ev)on_cpu_usage_signal(self, usage_data)
	on_cpu_usage_signal(self, usage_data)
}
SystemStatus --|> GenericWidget
SystemStatus ..* Ui_systemStatus
SystemStatus --* CpuUsageWorker
SystemStatus *--o CpuUsageMonitor

class CpuUsageMonitor {
	progress_bar
	identifier
	system_status

	__init__(self, system_status, identifier)
	start(self)
	on_cpu_usage_signal(self, usage_data)
}

class CpuUsageWorker < extends QtCore.QThread > {
	is_running
	__init__(self, parent)
	run(self)
}

}

@enduml
